    their width to just the largest initial width of the two
    (LP: #629437).
  * Update the panel to use the new location for the panel background,
    and force a redraw when setting it.
  * If the username only contains non-alphanumeric characters, set the
    hostname to ubuntu-{laptop,desktop}.
  * Replace RELEASE with the release name in the KDE UI finished dialog
    (LP: #628964).

  [ Colin Watson ]
  * Factor out common /proc/mounts handling into a new
    ubiquity.misc.mount_info function.

  [ Mario Limonciello ]
  * Adjust the fudge factor for showing languages on oem-config page
    due to the changes to the default window size being much bigger.
  * During oem-config's removal of ubiquity, remove other ubiquity
    related items that might have potentially still been on the system
    from a live-helper generated image.
  * Refactor mount_info to also report ro/rw, and let plugininstall
    key off that instead.

 -- Evan Dandrea <evand@ubuntu.com>  Mon, 06 Sep 2010 11:43:54 +0100

ubiquity (2.3.16) maverick; urgency=low

  [ Mario Limonciello ]
  * Don't show logout option in only-ubiquity mode(s) (LP: #618744)
  * Don't show a minimize option in only-ubiquity mode(s) (LP: #627656)
  * Translate the page_title of the language page when languages are
    swapped.
  * Restore functionality to set the GTK slideshow size based on a 
    configuration file that was lost in r4123.1.37.
  * Parse the slideshow size when the GTK frontend first starts to
    prevent the window resizing later.
  * Automatic update of included source packages: grub-installer
    1.55ubuntu1, partman-basicfilesystems 63ubuntu7, partman-efi
    21ubuntu1.

  [ Evan Dandrea ]
  * Do not generate or show the bootloader options if we're on x86, or
    bootloader installation is explicitly disabled (LP: #628582).
  * Add correct URL for the Geonames service.

  [ Colin Watson ]
  * Remove a number of unused or duplicate imports.
